@@ -25,8 +25,7 @@ import org.graylog.plugins.pipelineprocessor.db.RuleDao;
 import org.graylog.plugins.pipelineprocessor.db.RuleMetricsConfigService;
 import org.graylog.plugins.pipelineprocessor.db.RuleService;
 import org.graylog.plugins.pipelineprocessor.parser.FunctionRegistry;
-import org.graylog.plugins.pipelineprocessor.parser.PipelineRuleParser;
-import org.graylog.plugins.pipelineprocessor.processors.ConfigurationStateUpdater;
+import org.graylog.plugins.pipelineprocessor.simulator.RuleSimulator;
 import org.graylog2.streams.StreamService;
 import org.joda.time.DateTime;
 import org.joda.time.DateTimeZone;
@@ -35,10 +34,9 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
-import org.testcontainers.shaded.com.google.common.collect.ImmutableList;
-import org.testcontainers.shaded.com.google.common.collect.ImmutableMap;
 
 import java.util.List;
+import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.graylog2.shared.utilities.StringUtils.f;
@@ -60,9 +58,6 @@ public class RuleResourceTest {
     RuleMetricsConfigService ruleMetricsConfigService;
 
     @Mock
-    PipelineRuleParser pipelineRuleParser;
-
-    @Mock
     PaginatedRuleService paginatedRuleService;
 
     @Mock
@@ -72,43 +67,44 @@ public class RuleResourceTest {
     PipelineServiceHelper pipelineServiceHelper;
 
     @Mock
-    ConfigurationStateUpdater configurationStateUpdater;
-
-    @Mock
     StreamService streamService;
 
+    @Mock
+    RuleSimulator ruleSimulator;
+    @Mock
+    PipelineRuleService pipelineRuleService;
     RuleResource underTest;
 
     @Before
     public void setup() {
-        underTest = new RuleResource(ruleService, pipelineService, ruleMetricsConfigService,
-                pipelineRuleParser, paginatedRuleService, functionRegistry, pipelineServiceHelper,
-                configurationStateUpdater, streamService);
+        underTest = new RuleResource(ruleService, ruleSimulator, pipelineService, ruleMetricsConfigService,
+                pipelineRuleService, paginatedRuleService, functionRegistry,
+                pipelineServiceHelper, streamService);
     }
 
     @Test
     public void prepareContextForPaginatedResponse_returnsEmptyMapOnEmptyListOfRules() {
-        assertThat(underTest.prepareContextForPaginatedResponse(ImmutableList.of()))
-                .isEqualTo(ImmutableMap.of("used_in_pipelines", ImmutableMap.of()));
+        assertThat(underTest.prepareContextForPaginatedResponse(List.of()))
+                .isEqualTo(Map.of("used_in_pipelines", Map.of()));
     }
 
     @Test
     public void prepareContextForPaginatedResponse_returnsEmptyRuleMapIfRulesNotUsedByPipelines() {
-        final List<RuleDao> rules = ImmutableList.of(
+        final List<RuleDao> rules = List.of(
                 ruleDao("rule-1", "Rule 1"),
                 ruleDao("rule-2", "Rule 2")
         );
 
         assertThat(underTest.prepareContextForPaginatedResponse(rules))
-                .isEqualTo(ImmutableMap.of("used_in_pipelines", ImmutableMap.of(
-                        "rule-1", ImmutableList.of(),
-                        "rule-2", ImmutableList.of()
+                .isEqualTo(Map.of("used_in_pipelines", Map.of(
+                        "rule-1", List.of(),
+                        "rule-2", List.of()
                 )));
     }
 
     @Test
     public void prepareContextForPaginatedResponse_returnsRuleUsageMapIfRulesUsedByPipelines() {
-        final List<RuleDao> rules = ImmutableList.of(
+        final List<RuleDao> rules = List.of(
                 ruleDao("rule-1", "Rule 1"),
                 ruleDao("rule-2", "Rule 2"),
                 ruleDao("rule-3", "Rule 3"),
@@ -116,36 +112,37 @@ public class RuleResourceTest {
         );
 
         when(pipelineServiceHelper.groupByRuleName(any(), eq(ImmutableSet.of("Rule 1", "Rule 2", "Rule 3", "Rule 4"))))
-                .thenReturn(ImmutableMap.of(
-                        "Rule 1", ImmutableList.of(pipelineDao("pipeline-1", "Pipeline 1")),
-                        "Rule 2", ImmutableList.of(pipelineDao("pipeline-2", "Pipeline 2")),
-                        "Rule 3", ImmutableList.of(
+                .thenReturn(Map.of(
+                        "Rule 1", List.of(pipelineDao("pipeline-1", "Pipeline 1")),
+                        "Rule 2", List.of(pipelineDao("pipeline-2", "Pipeline 2")),
+                        "Rule 3", List.of(
                                 pipelineDao("pipeline-1", "Pipeline 1"),
                                 pipelineDao("pipeline-2", "Pipeline 2"),
                                 pipelineDao("pipeline-3", "Pipeline 3")
                         ),
-                        "Rule 4", ImmutableList.of()
+                        "Rule 4", List.of()
                 ));
 
         assertThat(underTest.prepareContextForPaginatedResponse(rules))
-                .isEqualTo(ImmutableMap.of("used_in_pipelines", ImmutableMap.of(
-                        "rule-1", ImmutableList.of(PipelineCompactSource.create("pipeline-1", "Pipeline 1")),
-                        "rule-2", ImmutableList.of(PipelineCompactSource.create("pipeline-2", "Pipeline 2")),
-                        "rule-3", ImmutableList.of(
+                .isEqualTo(Map.of("used_in_pipelines", Map.of(
+                        "rule-1", List.of(PipelineCompactSource.create("pipeline-1", "Pipeline 1")),
+                        "rule-2", List.of(PipelineCompactSource.create("pipeline-2", "Pipeline 2")),
+                        "rule-3", List.of(
                                 PipelineCompactSource.create("pipeline-1", "Pipeline 1"),
                                 PipelineCompactSource.create("pipeline-2", "Pipeline 2"),
                                 PipelineCompactSource.create("pipeline-3", "Pipeline 3")
                         ),
-                        "rule-4", ImmutableList.of()
+                        "rule-4", List.of()
                 )));
     }
 
     public RuleDao ruleDao(String id, String title) {
-        return RuleDao.create(id, title, null, f("rule \"%s\"\n" +
-                "when true\n" +
-                "then\n" +
-                "   debug(\"OK\");\n" +
-                "end", title), null, null);
+        return RuleDao.create(id, title, null, f("""
+                rule "%s"
+                when true
+                then
+                   debug("OK");
+                end""", title), null, null, null);
     }
 
     private PipelineDao pipelineDao(String id, String title) {
